added custom exception with message
