# src/main/java/com/kienast/authservice/exception/ErrorResponse.java
@@ -1,0 +1,23 @@
+package com.kienast.authservice.exception;
+
+public class ErrorResponse
+{
+    public ErrorResponse(String messages) {
+        super();
+        this.messages = messages;
+    }
+  
+    private String messages;
+
+    
+    public String getMessages() {
+      return messages;
+    }
+    public void setMessages(String messages) {
+      this.messages = messages;
+    }
+
+
+    
+
+  }
